--- a/小白问题速查.md
+++ b/小白问题速查.md
@@ -66,3 +66,63 @@ make download -j32
 ## 重新编译某个包  
 
  使用` make {toolchain,target,package/软件包名}/compile V=s -j17 `以重新构建.`busybox` ~~(boombox)~~ 可通过此方式解决
+
+## 自编译固件 如何开热点
+  `Network` > `WirelessAPD` > 
+
+  `hostapd-openssl` 和 `hostapd-mbedtls` 二选一,保存即可
+
+## 勾选无线网卡驱动,以mt7922和mt7921为例
+
+  `Kernel modules` > `Wireless Drivers`
+
+  勾选`kmod-mt7921e`即可
+
+  mediatek的无线网卡后缀规则为:
+
+  |  后缀  |  含义  |
+  |-------|-------|
+  |  e  |  PCIE  |
+  |  u  |  USB  |
+  |  s  |  SDIO  |
+
+## 通过手机或"随身wifi棒子"类产品通过USB接入漏油器实现上网功能
+  `Kernel modules` > `USB Support`
+  
+    `kmod-usb-net-rndis`,`kmod-usb-net-ipheth`,
+
+  `Utilities`>
+
+  `usbutils`,`usb-modeswitch`
+*
+  * luci内 找"网络->接口>设备"寻找usb*字样的设备
+  * 前往"网络->接口",新建接口,配置名称,协议选择为**DHCP客户端**,设备选择为usb*("*"这里是指数字,一般是0)
+  * 重复上一个操作,把**DHCP客户端**为**DHCPv6客户端**即可(实现**双栈**)
+  * 配置防火墙(一般是加入"wam"里面)
+  
+
+  在开启"USB共享网络后",ssh或以其他方式连接路由器的shell,执行
+    
+    ifconfig #以查看效果
+
+  或者直接在接口看
+  
+> [!TIP]
+> rndis虽然相对"老旧",但是还在用.
+>
+> luci内需查找"网络-->接口>设备寻找usb*字样的设备进行配置
+>
+
+# 开启UASP
+
+  `Kernel modules` > `USB Support`
+  
+    `kmod-usb-storage-extras`,`kmod-usb-storage-uas`,
+  
+  `Utilities`>
+  
+    `usbutils`,`usb-modeswitch`
+
+  在接入设备后,ssh或以其他方式连接路由器的shell,执行
+
+    lsusb -t #以查看设备情况
