--- a/小白问题速查.md
+++ b/小白问题速查.md
@@ -8,7 +8,11 @@
   
   原因:默认master分支不带网页(luci)
 
-  如果您已经部署完成,不想升级/覆盖安装,清执行`opkg update && opkg install default-settings-chn`
+  如果您已经部署完成,不想升级/覆盖安装,清执行`apk update && apk add default-settings-chn`
+
+  If you are a native English speaker, select `default-settings`.
+  
+  If you are a user of other languages (supported by this project), please select your language in `> LuCI > 2. Modules > Translations`
 
 ## 使用[selector](https://firmware-selector.immortalwrt.org/)构建最新内核的固件
 
@@ -25,7 +29,7 @@
     * 构建完成后下载刷入
 
 > [!TIP]
-> 2305(当前稳定版本)的对应内容复制到快照也OK
+> 2410 (当前稳定版本)的对应内容复制到快照也OK
 
 ## [WIP]selector 加入[源内](https://help.mirrors.cernet.edu.cn/immortalwrt/)已有软件包方法
 
@@ -60,9 +64,9 @@ make download -j32
 
   执行`rm -rf dl/出错的软件包名*`再度重新构建
 
-> [!TIP]
+<!-- > [!TIP]
 > 当你见到`dl/uhttpd-2023.06.25\~34a8a74d.tar.zst`这种奇怪的源码包,删除之,继续make即可
-> 
+>  -->
 ## 重新编译某个包  
 
  使用` make {toolchain,target,package/软件包名}/compile V=s -j17 `以重新构建.`busybox` ~~(boombox)~~ 可通过此方式解决
@@ -98,7 +102,7 @@ make download -j32
   * luci内 找"网络->接口>设备"寻找usb*字样的设备
   * 前往"网络->接口",新建接口,配置名称,协议选择为**DHCP客户端**,设备选择为usb*("*"这里是指数字,一般是0)
   * 重复上一个操作,把**DHCP客户端**为**DHCPv6客户端**即可(实现**双栈**)
-  * 配置防火墙(一般是加入"wam"里面)
+  * 配置防火墙(一般是加入"wan"里面)
   
 
   在开启"USB共享网络后",ssh或以其他方式连接路由器的shell,执行
@@ -111,6 +115,8 @@ make download -j32
 > rndis虽然相对"老旧",但是还在用.
 >
 > luci内需查找"网络-->接口>设备寻找usb*字样的设备进行配置
+> 
+> cdc-* 模式的设备(如ZTE F50)会映射为eth*
 >
 
 # 开启UASP
@@ -126,3 +132,14 @@ make download -j32
   在接入设备后,ssh或以其他方式连接路由器的shell,执行
 
     lsusb -t #以查看设备情况
+
+# nvme硬盘支持
+
+  `-> Kernel modules > Block Devices > kmod-nvme`
+
+# 常见luci插件的平替方案(fw3 >> fw4)
+
+  `ssrp >> hp`
+  
+  `syncdial >> pbr`
+  
