--- a/小白问题速查.md
+++ b/小白问题速查.md
@@ -98,7 +98,7 @@ make download -j32
   * luci内 找"网络->接口>设备"寻找usb*字样的设备
   * 前往"网络->接口",新建接口,配置名称,协议选择为**DHCP客户端**,设备选择为usb*("*"这里是指数字,一般是0)
   * 重复上一个操作,把**DHCP客户端**为**DHCPv6客户端**即可(实现**双栈**)
-  * 配置防火墙(一般是加入"wam"里面)
+  * 配置防火墙(一般是加入"wan"里面)
   
 
   在开启"USB共享网络后",ssh或以其他方式连接路由器的shell,执行
