加入对"llvm配置选项"的介绍

--- a/小白问题速查.md
+++ b/小白问题速查.md
@@ -71,6 +71,16 @@ make download -j32
 
  使用` make {toolchain,target,package/软件包名}/compile V=s -j17 `以重新构建.`busybox` ~~(boombox)~~ 可通过此方式解决
 
+## 使用本地LLVM(clang)
+
+```
+# CONFIG_BPF_TOOLCHAIN_BUILD_LLVM is not set
+CONFIG_BPF_TOOLCHAIN_HOST=y
+CONFIG_BPF_TOOLCHAIN_HOST_PATH=""
+```
+
+ 在配置菜单中,位置为`Advanced configuration options (for developers) > BPF toolchain (Use host LLVM toolchain) ` ,默认为空的参数是clang,
+
 ## 自编译固件 如何开热点
   `Network` > `WirelessAPD` > 
 
@@ -141,5 +151,5 @@ make download -j32
 
   `ssrp >> hp`
   
-  `syncdial >> pbr`
+  `syncdial + mwan3 >> pbr`
   
